GitHub/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>How_to_make_best_use_of_CAR_on_site__c</fullName>
        <description>This field used in &quot;Request a Community Account Representative Visit&quot; type cases created from Communities Portal for Notes</description>
        <label>How to make best use of CAR on-site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_name_or_type__c</fullName>
        <description>This field captures the Event name or type on the Request Event Support page on Communities</description>
        <label>Event name or type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	    <fields>
        <fullName>End_Time__c</fullName>
        <description>This field used in &quot;Request a Community Account Representative Visit&quot; type cases created from Communities Portal for End Time</description>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
	<fields>
        <fullName>Other_reason_for_visit__c</fullName>
        <description>This field used in &quot;Request a Community Account Representative Visit&quot; type cases created from Communities Portal for Reason of Visit is Other</description>
        <label>Other reason for visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Reason_for_Visit__c</fullName>
        <description>This field used in &quot;Request a Community Account Representative Visit&quot; type cases created from Communities Portal for Reason of Visit</description>
        <label>Reason for Visit</label>
        <picklist>
            <picklistValues>
                <fullName>- Escalation on a property-level issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Assistance with a courtesy/demonstration or business/corporate accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Property Construction that may impact service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Billing Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Property Event Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Discuss XFINITY Rewards program results or potential enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Many residents moving in on the same day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Review of the XFINITY penetration at the property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Staff training on XFINITY products and services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Additional XFINITY collateral or move-kits</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>This field used in &quot;Request a Community Account Representative Visit&quot; type cases created from Communities Portal for Start Time</description>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <description>This field used in &quot;Request a Community Account Representative Visit&quot; type cases created from Communities Portal for Visit Date</description>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_can_the_CAR_get_involved__c</fullName>
        <description>Describe how the Community Account Representative can get involved with the Move-In</description>
        <label>How can the CAR get involved?</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Move_in_Date__c</fullName>
        <description>Inform the Community Account Representative when many residents are moving in.</description>
        <label>Move in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <description>Inform the Community Account Representative about how many units</description>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	    <fields>
        <fullName>Number_of_Residents__c</fullName>
        <description>This field captures the count of residents attending the event on the Request Event Support page for Communities</description>
        <label>Number of Residents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>Request_giveaways__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on the Request Event Support page on Communities</description>
        <label>Request giveaways</label>
        <type>Checkbox</type>
    </fields>	    
    <fields>
        <fullName>Desired_appointment_times__c</fullName>
        <description>Text field for fetching Desired appointment times details</description>
        <label>Desired appointment times</label>
        <length>255</length>
        <type>Text</type>
    </fields>	  
    <fields>
        <fullName>Detailed_description_issue__c</fullName>
        <description>This field used in &quot;Property Service Issue&quot; type cases created from Communities Portal for issue description</description>
        <label>Detailed description of issue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impacting_issue__c</fullName>
        <description>This field used in &quot;Property Service Issue&quot; type cases created from Communities Portal for fetching impact issue</description>
        <label>Impacting issue</label>
        <picklist>
            <picklistValues>
                <fullName>Service Impacting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockbox Cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedestal Cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Wiring Concern</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_details__c</fullName>
        <description>This field used in &quot;Property Service Issue&quot; type cases created from Communities Portal for location details</description>
        <label>Location Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>This field used in &quot;Property Service Issue&quot; type cases created from Communities Portal for special instruction</description>
        <label>Special Instructions for the technician</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Xfinity_Materials__c</fullName>
        <description>Xfinity Materials for community</description>
        <label>Xfinity Materials</label>
        <picklist>
            <picklistValues>
                <fullName>Community Handbooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Brochures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mover&apos;s Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident Giveaway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Line-Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Items__c</fullName>
        <description>Request Items for Community Xfinity Material</description>
        <inlineHelpText>Select multiple items by holding the CTRL or Command button down as you click on each line.</inlineHelpText>
        <label>Request Items</label>
        <picklist>
            <picklistValues>
                <fullName>- Community Handbooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Product Brochures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Contact Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Mover&apos;s Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Move Kits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Resident Giveaway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- Channel Line-Up</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description_of_Request_s__c</fullName>
        <description>Detailed Description of Request(s): for Xfinity Materials in Community.</description>
        <label>Detailed Description of Request(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Community_Handbooks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Community Handbooks field for Communities</description>
        <label>Community Handbooks</label>
        <type>Checkbox</type>
    </fields>
   <fields>
        <fullName>Event_Date__c</fullName>
        <description>This field captures the date of the event on the Request Event Support page for Communities</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
     <fields>
        <fullName>Property_Name_Text__c</fullName>
        <formula>Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Name Text</label>
        <type>Text</type>
    </fields>
	<recordTypes>
        <fullName>Request_XFINITY_Materials_for_Residents</fullName>
        <active>true</active>
        <businessProcess>Xfinity Communities Portal</businessProcess>
        <label>Request XFINITY Materials for Residents</label>
    </recordTypes>
	<recordTypes>
        <fullName>Request_a_Community_Account_Representative_Visit</fullName>
        <active>true</active>
        <businessProcess>Xfinity Communities Portal</businessProcess>
        <label>Request a Community Account Representative Visit</label>
    </recordTypes>
	<recordTypes>
        <fullName>Request_Support_for_Multiple_Move_Ins</fullName>
        <active>true</active>
        <businessProcess>Xfinity Communities Portal</businessProcess>
        <description>Record Type for the Multiple Move In Request</description>
        <label>Request Support for Multiple Move Ins</label>
    </recordTypes>
	<recordTypes>
        <fullName>Report_Property_Service_Issue</fullName>
        <active>true</active>
        <businessProcess>Xfinity Communities Portal</businessProcess>
        <description>Xfinity Communities Portal user record type</description>
        <label>Report Property Service Issue</label>              
    </recordTypes>
	<recordTypes>
        <fullName>Request_Event_Support</fullName>
        <active>true</active>
        <businessProcess>Xfinity Communities Portal</businessProcess>
        <description>This is created for the Request Event Support page on Communities</description>
        <label>Request Event Support</label>
    </recordTypes>   
    <recordTypes>
        <fullName>Provide_Feedback</fullName>
        <active>true</active>
        <businessProcess>Xfinity Communities Portal</businessProcess>
        <description>This record type is used in XCP for Provide Feedback type case</description>
        <label>Provide Feedback</label>        
    </recordTypes>	
	<validationRules>
        <fullName>Event_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <description>The event date when submitting a request for event support on Communities cannot be a date in the past</description>
        <errorConditionFormula>Event_Date__c  &lt;  TODAY() &amp;&amp; (RecordType.Name = &apos;Request Event Support&apos;)</errorConditionFormula>
        <errorDisplayField>Event_Date__c</errorDisplayField>
        <errorMessage>Event date cannot be for a date in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Move_In_Date_cannot_be_in_past</fullName>
        <active>true</active>
        <description>Validation that the date cannot be in the past</description>
        <errorConditionFormula>Move_in_Date__c &lt; TODAY() &amp;&amp; (RecordType.Name = &apos;Request Support for Multiple Move Ins&apos;)</errorConditionFormula>
        <errorDisplayField>Move_in_Date__c</errorDisplayField>
        <errorMessage>Move In date cannot be for a date in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_of_residents_should_be_less_than_1000</fullName>
        <active>true</active>
        <description>Validation Rule for Number of Residents on Request Event Support page</description>
        <errorConditionFormula>AND((RecordType.Name = &apos;Request Event Support&apos;),
OR(Number_of_Residents__c &lt;= 0, Number_of_Residents__c &gt;= 1000))</errorConditionFormula>
        <errorDisplayField>Number_of_Residents__c</errorDisplayField>
        <errorMessage>Number of Residents must be between 1 and 999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_of_units_should_be_less_than_100</fullName>
        <active>true</active>
        <description>Validation Rule for Number of Units</description>
        <errorConditionFormula>AND((RecordType.Name = &apos;Request Support for Multiple Move Ins&apos;),
OR(Number_of_Units__c &lt;= 0, Number_of_Units__c &gt;= 100))</errorConditionFormula>
        <errorDisplayField>Number_of_Units__c</errorDisplayField>
        <errorMessage>This field must be greater than 0 and less than 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Name_cannot_be_in_past</fullName>
        <active>true</active>
        <description>This validation is used to restrict user from entering the date of past on Community Portal for Request CAR a Visit page.</description>
        <errorConditionFormula>Visit_Date__c &lt;  TODAY() &amp;&amp; (RecordType.Name = &apos;Request a Community Account Representative Visit&apos;)</errorConditionFormula>
        <errorDisplayField>Visit_Date__c</errorDisplayField>
        <errorMessage>Visit date cannot be for a date in the past.</errorMessage>
    </validationRules>
	<validationRules>
        <fullName>Region_is_required</fullName>
        <active>true</active>
        <description>Region field should be mandatory for all profiles except RSA</description>
        <errorConditionFormula>AND( 
	RecordType.Name != &quot;Wave Only User&quot;, 
	ISPICKVAL(Region__c , &quot;&quot;), 
	OR ( 
		AND( 
			OR( 
				$Profile.Name = &quot;Affiliate Claims User&quot;, 
				$Profile.Name = &quot;Claims User&quot;, 
				$Profile.Name = &quot;Claims Manager&quot; 
			), 
			NOT( 
				OR( 
					RecordType.Name != &quot;Closed Claim&quot;, 
					RecordType.Name != &quot;Open Accepted Claim&quot;, 
					RecordType.Name != &quot;Open Assigned Claim&quot;

				) 
			) 
		), 
		AND( 
			$Profile.Name = &quot;Affiliate Escalation User&quot;, 
			NOT( 
				OR( 
					RecordType.Name != &quot;Post-Order Escalation&quot;, 
					RecordType.Name != &quot;Pre-Order Escalation&quot; 
				) 
			) 
		), 
		AND( 
			$Profile.Name = &quot;Gold Partner User&quot;, 
			RecordType.Name = &quot;Master&quot; 
		), 
		AND( 
			$Profile.Name = &quot;XC MCAT Only&quot;, 
			RecordType.Name != &quot;SalesSpace MCAT&quot; 
		), 
		AND( 
			$Profile.Name = &quot;Regional System Admin (RSA)&quot;, 
			NOT( 
				OR( 
					RecordType.Name != &quot;Closed Claim&quot;, 
					RecordType.Name != &quot;Open Accepted Claim&quot;, 
					RecordType.Name != &quot;Open Assigned Claim&quot;, 
					RecordType.Name != &quot;Defect Management&quot; 

				) 
			) 
		), 
		AND( 
			$Profile.Name = &quot;Regional System Admin (RSA)&quot;, 
			OR( 
				RecordType.Name = &quot;SalesSpace Chatter&quot; , 
				RecordType.Name = &quot;SalesSpace Coach Huddle/Forum&quot;, 
				RecordType.Name = &quot;SalesSpace Property Lab&quot;, 
				RecordType.Name = &quot;SR/Ticket Management&quot;, 
				RecordType.Name = &quot;SalesSpace NSO&quot; 

			) 
		), 		
		AND( 
			$Profile.Name != &quot;Regional System Admin (RSA)&quot;, 
			$Profile.Name != &quot;Affiliate Claims User&quot;, 
			$Profile.Name != &quot;Affiliate Escalation User&quot;, 
			$Profile.Name != &quot;Gold Partner User&quot;,
			$Profile.Name != &quot;Claims User&quot;,
			$Profile.Name != &quot;Claims Manager&quot;,
			$Profile.Name != &quot;XC MCAT Only&quot;, 
			$Profile.Name != &quot;XC Property Professional User&quot;,
			AND( 
				OR(
					$Profile.Name = &quot;XC Property Professional User&quot;, 
					$Profile.Name = &quot;System Administrator&quot;
				),
				NOT( 
					OR( 
						RecordType.Name != &quot;XCP Multiple Move In Request&quot;, 
						RecordType.Name != &quot;XCP Property Service Issue&quot;, 
						RecordType.Name != &quot;XCP Request CAR for Visit&quot;, 
						RecordType.Name != &quot;XCP Request Event Support&quot;, 
						RecordType.Name != &quot;Request XFINITY Materials for Residents&quot;,
						RecordType.Name != &quot;Provide Feedback&quot;
					) 
				) 
			)			
		)
		
	) 
)</errorConditionFormula>
        <errorMessage>Region is required.</errorMessage>
    </validationRules>
</CustomObject>